Prevodjenje programskih jezika/sve2019/7_1/calc/parser.output
Grammar

    0 $accept: program $end

    1 program: niz_naredbi

    2 niz_naredbi: niz_naredbi naredba ';'
    3            | naredba ';'

    4 naredba: PRINT_ALL
    5        | PRINT '(' izraz ')'
    6        | ID '=' izraz
    7        | izraz '<' izraz
    8        | izraz '>' izraz
    9        | izraz EQ izraz
   10        | izraz NEQ izraz
   11        | izraz LEQ izraz
   12        | izraz GEQ izraz

   13 izraz: izraz '+' izraz
   14      | izraz '-' izraz
   15      | izraz '*' izraz
   16      | izraz '/' izraz
   17      | '-' izraz
   18      | '(' izraz ')'
   19      | ID
   20      | BROJ


Terminals, with rules where they appear

$end (0) 0
'(' (40) 5 18
')' (41) 5 18
'*' (42) 15
'+' (43) 13
'-' (45) 14 17
'/' (47) 16
';' (59) 2 3
'<' (60) 7
'=' (61) 6
'>' (62) 8
error (256)
UMINUS (258)
PRINT (259) 5
PRINT_ALL (260) 4
LEQ (261) 11
NEQ (262) 10
EQ (263) 9
GEQ (264) 12
BROJ (265) 20
ID (266) 6 19


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
program (23)
    on left: 1, on right: 0
niz_naredbi (24)
    on left: 2 3, on right: 1 2
naredba (25)
    on left: 4 5 6 7 8 9 10 11 12, on right: 2 3
izraz (26)
    on left: 13 14 15 16 17 18 19 20, on right: 5 6 7 8 9 10 11 12
    13 14 15 16 17 18


State 0

    0 $accept: . program $end

    '-'        shift, and go to state 1
    PRINT      shift, and go to state 2
    PRINT_ALL  shift, and go to state 3
    BROJ       shift, and go to state 4
    ID         shift, and go to state 5
    '('        shift, and go to state 6

    program      go to state 7
    niz_naredbi  go to state 8
    naredba      go to state 9
    izraz        go to state 10


State 1

   17 izraz: '-' . izraz

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 4
    ID    shift, and go to state 11
    '('   shift, and go to state 6

    izraz  go to state 12


State 2

    5 naredba: PRINT . '(' izraz ')'

    '('  shift, and go to state 13


State 3

    4 naredba: PRINT_ALL .

    $default  reduce using rule 4 (naredba)


State 4

   20 izraz: BROJ .

    $default  reduce using rule 20 (izraz)


State 5

    6 naredba: ID . '=' izraz
   19 izraz: ID .

    '='  shift, and go to state 14

    $default  reduce using rule 19 (izraz)


State 6

   18 izraz: '(' . izraz ')'

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 4
    ID    shift, and go to state 11
    '('   shift, and go to state 6

    izraz  go to state 15


State 7

    0 $accept: program . $end

    $end  shift, and go to state 16


State 8

    1 program: niz_naredbi .
    2 niz_naredbi: niz_naredbi . naredba ';'

    '-'        shift, and go to state 1
    PRINT      shift, and go to state 2
    PRINT_ALL  shift, and go to state 3
    BROJ       shift, and go to state 4
    ID         shift, and go to state 5
    '('        shift, and go to state 6

    $default  reduce using rule 1 (program)

    naredba  go to state 17
    izraz    go to state 10


State 9

    3 niz_naredbi: naredba . ';'

    ';'  shift, and go to state 18


State 10

    7 naredba: izraz . '<' izraz
    8        | izraz . '>' izraz
    9        | izraz . EQ izraz
   10        | izraz . NEQ izraz
   11        | izraz . LEQ izraz
   12        | izraz . GEQ izraz
   13 izraz: izraz . '+' izraz
   14      | izraz . '-' izraz
   15      | izraz . '*' izraz
   16      | izraz . '/' izraz

    '+'  shift, and go to state 19
    '-'  shift, and go to state 20
    '*'  shift, and go to state 21
    '/'  shift, and go to state 22
    LEQ  shift, and go to state 23
    NEQ  shift, and go to state 24
    EQ   shift, and go to state 25
    GEQ  shift, and go to state 26
    '<'  shift, and go to state 27
    '>'  shift, and go to state 28


State 11

   19 izraz: ID .

    $default  reduce using rule 19 (izraz)


State 12

   13 izraz: izraz . '+' izraz
   14      | izraz . '-' izraz
   15      | izraz . '*' izraz
   16      | izraz . '/' izraz
   17      | '-' izraz .

    $default  reduce using rule 17 (izraz)


State 13

    5 naredba: PRINT '(' . izraz ')'

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 4
    ID    shift, and go to state 11
    '('   shift, and go to state 6

    izraz  go to state 29


State 14

    6 naredba: ID '=' . izraz

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 4
    ID    shift, and go to state 11
    '('   shift, and go to state 6

    izraz  go to state 30


State 15

   13 izraz: izraz . '+' izraz
   14      | izraz . '-' izraz
   15      | izraz . '*' izraz
   16      | izraz . '/' izraz
   18      | '(' izraz . ')'

    '+'  shift, and go to state 19
    '-'  shift, and go to state 20
    '*'  shift, and go to state 21
    '/'  shift, and go to state 22
    ')'  shift, and go to state 31


State 16

    0 $accept: program $end .

    $default  accept


State 17

    2 niz_naredbi: niz_naredbi naredba . ';'

    ';'  shift, and go to state 32


State 18

    3 niz_naredbi: naredba ';' .

    $default  reduce using rule 3 (niz_naredbi)


State 19

   13 izraz: izraz '+' . izraz

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 4
    ID    shift, and go to state 11
    '('   shift, and go to state 6

    izraz  go to state 33


State 20

   14 izraz: izraz '-' . izraz

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 4
    ID    shift, and go to state 11
    '('   shift, and go to state 6

    izraz  go to state 34


State 21

   15 izraz: izraz '*' . izraz

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 4
    ID    shift, and go to state 11
    '('   shift, and go to state 6

    izraz  go to state 35


State 22

   16 izraz: izraz '/' . izraz

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 4
    ID    shift, and go to state 11
    '('   shift, and go to state 6

    izraz  go to state 36


State 23

   11 naredba: izraz LEQ . izraz

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 4
    ID    shift, and go to state 11
    '('   shift, and go to state 6

    izraz  go to state 37


State 24

   10 naredba: izraz NEQ . izraz

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 4
    ID    shift, and go to state 11
    '('   shift, and go to state 6

    izraz  go to state 38


State 25

    9 naredba: izraz EQ . izraz

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 4
    ID    shift, and go to state 11
    '('   shift, and go to state 6

    izraz  go to state 39


State 26

   12 naredba: izraz GEQ . izraz

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 4
    ID    shift, and go to state 11
    '('   shift, and go to state 6

    izraz  go to state 40


State 27

    7 naredba: izraz '<' . izraz

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 4
    ID    shift, and go to state 11
    '('   shift, and go to state 6

    izraz  go to state 41


State 28

    8 naredba: izraz '>' . izraz

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 4
    ID    shift, and go to state 11
    '('   shift, and go to state 6

    izraz  go to state 42


State 29

    5 naredba: PRINT '(' izraz . ')'
   13 izraz: izraz . '+' izraz
   14      | izraz . '-' izraz
   15      | izraz . '*' izraz
   16      | izraz . '/' izraz

    '+'  shift, and go to state 19
    '-'  shift, and go to state 20
    '*'  shift, and go to state 21
    '/'  shift, and go to state 22
    ')'  shift, and go to state 43


State 30

    6 naredba: ID '=' izraz .
   13 izraz: izraz . '+' izraz
   14      | izraz . '-' izraz
   15      | izraz . '*' izraz
   16      | izraz . '/' izraz

    '+'  shift, and go to state 19
    '-'  shift, and go to state 20
    '*'  shift, and go to state 21
    '/'  shift, and go to state 22

    $default  reduce using rule 6 (naredba)


State 31

   18 izraz: '(' izraz ')' .

    $default  reduce using rule 18 (izraz)


State 32

    2 niz_naredbi: niz_naredbi naredba ';' .

    $default  reduce using rule 2 (niz_naredbi)


State 33

   13 izraz: izraz . '+' izraz
   13      | izraz '+' izraz .
   14      | izraz . '-' izraz
   15      | izraz . '*' izraz
   16      | izraz . '/' izraz

    '*'  shift, and go to state 21
    '/'  shift, and go to state 22

    $default  reduce using rule 13 (izraz)


State 34

   13 izraz: izraz . '+' izraz
   14      | izraz . '-' izraz
   14      | izraz '-' izraz .
   15      | izraz . '*' izraz
   16      | izraz . '/' izraz

    '*'  shift, and go to state 21
    '/'  shift, and go to state 22

    $default  reduce using rule 14 (izraz)


State 35

   13 izraz: izraz . '+' izraz
   14      | izraz . '-' izraz
   15      | izraz . '*' izraz
   15      | izraz '*' izraz .
   16      | izraz . '/' izraz

    $default  reduce using rule 15 (izraz)


State 36

   13 izraz: izraz . '+' izraz
   14      | izraz . '-' izraz
   15      | izraz . '*' izraz
   16      | izraz . '/' izraz
   16      | izraz '/' izraz .

    $default  reduce using rule 16 (izraz)


State 37

   11 naredba: izraz LEQ izraz .
   13 izraz: izraz . '+' izraz
   14      | izraz . '-' izraz
   15      | izraz . '*' izraz
   16      | izraz . '/' izraz

    '+'  shift, and go to state 19
    '-'  shift, and go to state 20
    '*'  shift, and go to state 21
    '/'  shift, and go to state 22

    $default  reduce using rule 11 (naredba)


State 38

   10 naredba: izraz NEQ izraz .
   13 izraz: izraz . '+' izraz
   14      | izraz . '-' izraz
   15      | izraz . '*' izraz
   16      | izraz . '/' izraz

    '+'  shift, and go to state 19
    '-'  shift, and go to state 20
    '*'  shift, and go to state 21
    '/'  shift, and go to state 22

    $default  reduce using rule 10 (naredba)


State 39

    9 naredba: izraz EQ izraz .
   13 izraz: izraz . '+' izraz
   14      | izraz . '-' izraz
   15      | izraz . '*' izraz
   16      | izraz . '/' izraz

    '+'  shift, and go to state 19
    '-'  shift, and go to state 20
    '*'  shift, and go to state 21
    '/'  shift, and go to state 22

    $default  reduce using rule 9 (naredba)


State 40

   12 naredba: izraz GEQ izraz .
   13 izraz: izraz . '+' izraz
   14      | izraz . '-' izraz
   15      | izraz . '*' izraz
   16      | izraz . '/' izraz

    '+'  shift, and go to state 19
    '-'  shift, and go to state 20
    '*'  shift, and go to state 21
    '/'  shift, and go to state 22

    $default  reduce using rule 12 (naredba)


State 41

    7 naredba: izraz '<' izraz .
   13 izraz: izraz . '+' izraz
   14      | izraz . '-' izraz
   15      | izraz . '*' izraz
   16      | izraz . '/' izraz

    '+'  shift, and go to state 19
    '-'  shift, and go to state 20
    '*'  shift, and go to state 21
    '/'  shift, and go to state 22

    $default  reduce using rule 7 (naredba)


State 42

    8 naredba: izraz '>' izraz .
   13 izraz: izraz . '+' izraz
   14      | izraz . '-' izraz
   15      | izraz . '*' izraz
   16      | izraz . '/' izraz

    '+'  shift, and go to state 19
    '-'  shift, and go to state 20
    '*'  shift, and go to state 21
    '/'  shift, and go to state 22

    $default  reduce using rule 8 (naredba)


State 43

    5 naredba: PRINT '(' izraz ')' .

    $default  reduce using rule 5 (naredba)
